어댑터 연결중, map 사용중

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,17 +8,18 @@
 
     <EditText
         android:id="@+id/findwindow"
-        android:layout_width="300dp"
+        android:layout_width="250dp"
         android:layout_height="40dp"
-        android:privateImeOptions="defaultInputmode=korean"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="100dp"
         android:background="#d2d2d2"
         android:gravity="center"
+        android:hint="test1"
+        android:privateImeOptions="defaultInputmode=korean"
         android:text=""
-        android:hint="test1"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.486"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/button"
@@ -29,6 +30,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/findwindow"
         app:layout_constraintTop_toTopOf="@+id/findwindow" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:padding="40dp"
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/findwindow"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
