--- a/app/src/main/res/layout/item_find.xml
+++ b/app/src/main/res/layout/item_find.xml
@@ -2,47 +2,61 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="10dp"
+    android:orientation="horizontal"
+    android:layout_margin="5dp"
     android:weightSum="10">
-
+    <ImageView
+        android:layout_width="50dp"
+        android:layout_height="70dp"
+        android:id="@+id/foodimg"
+        android:layout_weight="3"/>
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="9"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/findTitle"
-            android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="vertical"
+        android:layout_weight="7">
+        <LinearLayout
+            android:layout_width="230dp"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:text="Title"
-            android:textColor="@color/colorPrimary"
-            android:textSize="18sp"/>
+            android:layout_weight="9"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/findTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="Title"
+                android:textColor="#1C1C1C"
+                android:textSize="18sp"/>
 
-        <TextView
-            android:id="@+id/findContent"
-            android:layout_width="match_parent"
+            <TextView
+                android:id="@+id/findContent"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:layout_gravity="left"
+                android:textSize="12sp"
+                android:maxLength="30"
+                android:text="Text for Content" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:padding="5dp"
-            android:text="Text for Content" />
+            android:layout_weight="1"
+            android:layout_gravity="right"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/findTime"
+                android:paddingRight="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Cook Time" />
+        </LinearLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="#CCCCCC" />
     </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_gravity="right"
-        android:orientation="vertical">
-
-        <TextView
-            android:id="@+id/findTime"
-            android:layout_marginTop="30dp"
-            android:padding="5dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Cook Time" />
-    </LinearLayout>
-
 </LinearLayout>
