--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,10 +15,10 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"/>
     <ImageButton
-        android:layout_width="30dp"
-        android:layout_height="35dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:id="@+id/intentBtn"
-        android:background="#FFFFFFFF"
+        android:background="#00000000"
         android:src="@drawable/recipebook"
         android:layout_marginTop="5dp"
         android:layout_marginRight="20dp"
