--- a/app/src/main/res/layout/activity_content.xml
+++ b/app/src/main/res/layout/activity_content.xml
@@ -17,6 +17,37 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="15dp"/>
 
+    <TextView
+        android:id="@+id/foodName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
+        android:text="음식명"
+        android:textSize="32sp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/ingredient"
+        android:layout_marginTop="25dp"
+        app:layout_constraintTop_toBottomOf="@+id/foodName"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:text="재료"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/time"
+        app:layout_constraintBottom_toBottomOf="@+id/foodName"
+        app:layout_constraintLeft_toRightOf="@+id/foodName"
+        android:layout_marginLeft="20dp"
+        android:textSize="20sp"
+        android:text="시간"/>
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -25,5 +56,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        android:layout_marginTop="120dp"/>
+        android:layout_marginTop="170dp"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
