--- a/app/src/main/res/layout/activity_recipe_list.xml
+++ b/app/src/main/res/layout/activity_recipe_list.xml
@@ -16,6 +16,13 @@
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginLeft="25dp"
         android:layout_marginTop="15dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="BTN"
+        android:id="@+id/addBtn"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
     <ImageView
 
         android:layout_width="wrap_content"
